--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,30 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+.idea/codeStyles/
+.idea/inspectionProfiles/
+.idea/modules.xml
+.idea/sonarlint/
+.idea/springboot-elasticSearch.iml
+.idea/vcs.xml
+# IntelliJ project files
+.idea/
+*.iml
+*.ipr
+*.iws
+out
+gem
+
+# Eclipse project files
+.classpath
+.project
+.settings/
+
+# MacOS files
+.DS_Store
+
+# Windows files
+Thumbs.db
+
+# Maven files
+target/
